--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
@@ -91,7 +91,7 @@
                                     <tbody>
                                         <tr ng-repeat="pr in products">
                                             <td>
-                                                <img src="http://localhost:8080/getImage/{{pr.image}}" width="80" height="80" alt="available" class="">
+                                                <img ng-src="http://localhost:8080/getImage/{{pr.image}}" width="80" height="80" alt="available" class="">
                                             </td>
                                             <td>{{pr.name}}</td>
                                             <td>{{pr.price|number}}</td>
@@ -123,7 +123,7 @@
                                                 <div class="row">
                                                     <div class="col-sm-3 text-center main-image">
                                                         <label for="main-image" class="" style="box-shadow: 0 0 10px rgb(190, 190, 190);border: 1px solid rgb(209, 209, 209);border-radius: 15px;cursor: pointer;">
-                                                        <img src="File_Local/icon/no_image_300_300.jpg" alt="Product" style="object-fit: contain;" id="main-img">
+                                                        <img ng-src="{{mainNameImage}}" alt="Product" style="object-fit: contain;" id="main-img">
                                                     </label>
                                                     </div>
 
@@ -135,7 +135,7 @@
                                                             <input type="file" style="visibility: hidden;" multiple name="file" id="gallery-photo-add" accept="image/gif, image/jpeg, image/png">
                                                         </div>
                                                         <div class="d-flex mb-2 sub-img" style="max-height:400px; height: 300px; overflow-y: auto; ">
-                                                            <img ng-src="/File_Local/Images/product.image/img-sub" alt="" ng-repeat="img-sub in listImages">
+                                                            <img ng-src="{{img}}" ng-repeat="img in listImages" alt="{{$index}}" onclick="removeImage(this)">
                                                         </div>
                                                     </div> <input type="file" class="form-group" id="main-image" style="visibility: hidden;" accept="image/gif, image/jpeg, image/png"></input>
 
@@ -214,10 +214,9 @@
                                             </div>
                                     </div>
                                     <div class="text-center ">
-                                        <button class="bg-primary text-white p-2" style="border-radius: 5px ;" ng-click="createProduct()">Create</button>
-                                        <button class="bg-warning text-white p-2" style="border-radius: 5px ;">Update</button>
-                                        <button class="bg-danger text-white p-2" style="border-radius: 5px ;">Delete</button>
-                                        <button class="bg-info text-white p-2" style="border-radius: 5px ;" onclick="colorValues()">Reset</button>
+                                        <button class="bg-primary text-white p-2" style="border-radius: 5px ;" ng-click="createProduct()" ng-disabled="product.name!=undefined">Create</button>
+                                        <button class="bg-warning text-white p-2" style="border-radius: 5px ;" ng-click="updateProduct()" ng-disabled="product.name==undefined">Update</button>
+                                        <button class="bg-info text-white p-2" style="border-radius: 5px ;" ng-click="reset()">Reset</button>
                                     </div>
                                     </form>
                                 </div>
