--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
@@ -12,6 +12,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Hmart-Smart Product eCommerce html Template">
     <!-- Favicon -->
+
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <!-- CSS
     ============================================ -->
@@ -25,12 +26,14 @@
     <!-- Style CSS -->
     <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
     <!-- Minify Version -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
 
-<body ng-app="myProduct" ng-controller="detail">
+<body ng-app="myDetail" ng-controller="detail">
     <div class="main-wrapper">
         <header>
             <!-- Header top area start -->
@@ -266,10 +269,12 @@
                     <h5 class="text-secondary" ng-show="cart.count == 0 || cart.count == null">Have a nice shopping <i class="bi bi-heart"></i></h5>
                 </div>
                 <div class="foot">
-                    <div class="buttons mt-30px">
+                    <div class="buttons mt-30px" ng-show="cart.count != 0 && cart.count != null">
                         <a href="cart.html" class="btn btn-dark btn-hover-primary mb-2">View cart</a>
                         <a ng-click="cart.clear()" class="btn current-btn">Reset</a>
                     </div>
+                    <div class="buttons mt-30px" ng-show="cart.count == 0 || cart.count == null">
+                        <a href="empty-cart.html" class="btn btn-dark btn-hover-primary mb-2">View cart</a> </div>
                 </div>
             </div>
         </div>
@@ -505,11 +510,11 @@
                                 <span class="read-review"><a class="reviews" href="#">(5 Customer Review)</a></span>
                             </div>
                             <div class="pro-details-quality">
-                                <div class="cart-plus-minus">
-                                    <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1" />
+                                <div class="col-2 p-0">
+                                    <input class="form-control p-2 text-center bg-dark text-light" ng-model="productQty" value="1" type="number" min="1" max="20" style="font-size: 16px;" />
                                 </div>
                                 <div class="pro-details-cart">
-                                    <button class="add-cart"> Add To
+                                    <button class="add-cart" ng-click="cart.addWithQty(product.id)"> Add To
                                         Cart</button>
                                 </div>
                                 <div class="pro-details-compare-wishlist pro-details-wishlist ">
@@ -874,7 +879,7 @@
     <script src="assets/js/plugins.min.js"></script>
     <script src="assets/js/main.min.js"></script>
     <script src="assets/js/menu.js"></script>
-    <script src="assets/js/product.js"></script>
+    <script src="assets/js/single.js"></script>
     <!--Main JS (Common Activation Codes)-->
     <!-- <script src="assets/js/main.js"></script> -->
 </body>
