--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
@@ -59,10 +59,11 @@
                     <!-- Nav tabs -->
                     <div class="dashboard_tab_button" data-aos="fade-up" data-aos-delay="0">
                         <ul role="tablist" class="nav navbar-expand-lg dashboard-list">
-                            <li><a href="#ProductManagement" data-bs-toggle="tab" class="nav-link active" id="product">Product
-                                    Management</a></li>
-                            <li><a href="#account-details" data-bs-toggle="tab" class="nav-link" id="productEdit">Create Products</a>
-                            </li>
+                            <li><a href="#ProductManagement" data-bs-toggle="tab" class="nav-link active" id="product">Product Management</a></li>
+                            <li><a href="#account-details" data-bs-toggle="tab" class="nav-link" id="productEdit">Create Products</a></li>
+
+                            <li><a href="#discount" data-bs-toggle="tab" class="nav-link" id="">Discount</a></li>
+                            <li><a href="#conditent" data-bs-toggle="tab" class="nav-link" id="">Conditent discount</a></li>
                             <li><a href="login.html" class="nav-link">logout</a></li>
                         </ul>
                     </div>
@@ -89,9 +90,9 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr ng-repeat="pr in products">
+                                        <tr ng-repeat="pr in pager.items">
                                             <td>
-                                                <img ng-src="http://localhost:8080/getImage/{{pr.image}}" width="80" height="80" alt="available" class="">
+                                                <img ng-src="http://localhost:8080/getImage/{{pr.image}}" width="80" height="80" alt="Available" class="">
                                             </td>
                                             <td>{{pr.name}}</td>
                                             <td>{{pr.price|number}}</td>
@@ -112,6 +113,21 @@
                                     </tbody>
                                 </table>
                             </div>
+                            <div class="panel-footer text-center mt-4">
+                                <button ng-click="pager.first()" class="bg-primary text-white p-2" style="border-radius: 5px ;">
+                                    <i class="fa fa-step-backward" aria-hidden="true"></i>
+                                </button>
+                                <button ng-click="pager.prev()" class="bg-primary text-white p-2" style="border-radius: 5px ;">
+                                    <i class="fa fa-hand-o-left" aria-hidden="true"></i>
+                                </button>
+                                <button class="bg-success text-white p-2" style="border-radius: 5px ;">{{pager.page + 1}} of {{pager.count}}</button>
+                                <button ng-click="pager.next()" class="bg-primary text-white p-2" style="border-radius: 5px ;">
+                                    <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+                                </button>
+                                <button ng-click="pager.last()" class="bg-primary text-white p-2" style="border-radius: 5px ;">
+                                    <i class="fa fa-step-forward" aria-hidden="true"></i>
+                                </button>
+                            </div>
                         </div>
                         <div class="tab-pane fade" id="account-details">
                             <h3>Create Products</h3>
@@ -123,8 +139,9 @@
                                                 <div class="row">
                                                     <div class="col-sm-3 text-center main-image">
                                                         <label for="main-image" class="" style="box-shadow: 0 0 10px rgb(190, 190, 190);border: 1px solid rgb(209, 209, 209);border-radius: 15px;cursor: pointer;">
-                                                        <img ng-src="{{mainNameImage}}" alt="Product" style="object-fit: contain;" id="main-img">
+                                                        <img src="{{mainNameImage}}" alt="Product" style="object-fit: contain;" id="main-img">
                                                     </label>
+                                                        <input type="file" class="form-group" id="main-image" multiple style="visibility: hidden;" accept="image/gif, image/jpeg, image/png"></input>
                                                     </div>
 
                                                     <div class="col-sm-9" style="box-shadow: 0 0 10px rgb(190, 190, 190);max-height:400px; height: 300px;border: 1px solid rgb(211, 211, 211);border-radius: 10px;">
@@ -135,9 +152,11 @@
                                                             <input type="file" style="visibility: hidden;" multiple name="file" id="gallery-photo-add" accept="image/gif, image/jpeg, image/png">
                                                         </div>
                                                         <div class="d-flex mb-2 sub-img" style="max-height:400px; height: 300px; overflow-y: auto; ">
-                                                            <img ng-src="{{img}}" ng-repeat="img in listImages" alt="{{$index}}" onclick="removeImage(this)">
+                                                            <div ng-repeat="img in listImages">
+                                                                <img ng-src="{{img}}" alt="{{$index}}" onclick="imageRemove(this)">
+                                                            </div>
                                                         </div>
-                                                    </div> <input type="file" class="form-group" id="main-image" style="visibility: hidden;" accept="image/gif, image/jpeg, image/png"></input>
+                                                    </div>
 
                                                 </div>
                                                 <div class="row">
@@ -175,7 +194,8 @@
                                                             <div class="more-color d-flex">
                                                                 <!-- A color -->
                                                                 <div class="a-color" ng-repeat="vl in cutValueColors(product.color)">
-                                                                    <input type="color" value="{{vl}}" disabled>
+                                                                    <button onclick="remove(this)">Remove</button>
+                                                                    <input type="color" value="{{vl}}" disabled class="value-color">
                                                                 </div>
                                                                 <!-- End color -->
                                                             </div>
@@ -214,13 +234,126 @@
                                             </div>
                                     </div>
                                     <div class="text-center ">
-                                        <button class="bg-primary text-white p-2" style="border-radius: 5px ;" ng-click="createProduct()" ng-disabled="product.name!=undefined">Create</button>
-                                        <button class="bg-warning text-white p-2" style="border-radius: 5px ;" ng-click="updateProduct()" ng-disabled="product.name==undefined">Update</button>
+                                        <button class="bg-primary text-white p-2" style="border-radius: 5px ;" ng-click="createProduct()">Create</button>
+                                        <button class="bg-warning text-white p-2" style="border-radius: 5px ;" ng-click="updateProduct()">Update</button>
                                         <button class="bg-info text-white p-2" style="border-radius: 5px ;" ng-click="reset()">Reset</button>
                                     </div>
                                     </form>
                                 </div>
                             </div>
+                        </div>
+                        <div class="tab-pane fade" id="discount">
+                            <form>
+                                <div class="row">
+                                    <div class="default-form-box col-sm-6">
+                                        <div>Apply to products</div>
+                                        <select name="" id="" class="form-control" ng-model="discount.product.id">
+                                            <option value="" disabled>Choose product use</option>
+                                            <option ng-value="pr.id"  class="" ng-repeat="pr in products">{{pr.name}}</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="default-form-box col-sm-6">
+                                        <div>ConditionsOfUse</div>
+                                        <select name="" id="" class="form-control" ng-model="discount.conditions.id">
+                                            <option value="" disabled>Choose condtions use</option>
+                                            <option ng-value="con.id" class="" ng-repeat="con in conditents">Min spend {{con.contents| currency : 'VND '}} || Quantity request {{con.quantity}} </option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="default-form-box col-sm-12">
+                                    <div>Discount Form</div>
+                                    <select name="" id="" class="form-control" ng-model="discount.discountform">
+                                        <option value="" disabled>Choose form discount</option>
+                                        <option value="true">Discount at face value</option>
+                                        <option value="false">Percentage discount</option>
+                                    </select>
+                                </div>
+                                <div class="row">
+                                    <div class="default-form-box col-sm-6">
+                                        <label for="exampleInput1">Value discount</label>
+                                        <input type="number" ng-model="discount.valuedecrease" class="form-control" id="" aria-describedby="" placeholder=" ">
+
+                                    </div>
+                                    <div class="default-form-box col-sm-6">
+                                        <label for="">TitleDiscount</label>
+                                        <input ng-model="discount.titleDiscount" type="" class="form-control" id="" placeholder="">
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="default-form-box col-sm-6">
+                                        <label for="">StartDate</label>
+                                        <input type="date" class="form-control" id="" placeholder="" ng-model="discount.startDate">
+                                    </div>
+                                    <div class="default-form-box col-sm-6">
+                                        <label for=""> EndDate</label>
+                                        <input type="date" class="form-control" id="" aria-describedby="" placeholder=" " ng-model="discount.endDate">
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label for=""> ContentDiscount</label>
+                                    <textarea name="" id="" cols="" rows="6" class="form-control" ng-model="discount.contentDiscount"></textarea>
+                                </div>
+                                <div class="form-group mt-4 col-sm-4">
+                                    <button class="bg-success text-white p-2 w-100" style="border-radius: 5px ;" ng-click="newDiscount()"><i class="fa fa-hand-o-up" aria-hidden="true"></i>
+                                         New discount</button>
+                                </div>
+                            </form>
+                            <hr>
+                            <h3 class="text-center">List discount</h3>
+                            <div class="row">
+                                <div class="card m-2" style="width: 24rem; background-color: rgb(255, 255, 255);" ng-repeat="dis in discounts">
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{dis.titleDiscount}}</h5>
+                                        <h3 class="card-subtitle mb-2 text-muted">{{dis.valuedecrease}} {{dis.discountForm?'%':'thousand dong'}}</h3>
+                                        <small class="text-muted">For each product</small>
+                                        <p class="card-text">Start date {{dis.startDate|date:'dd/MM/yyyy'}} from {{dis.endDate|date:'dd/MM/yyyy'}}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="conditent">
+                            <form class="mt-3">
+                                <div class="row">
+                                    <div class="default-form-box col-sm-6">
+                                        <div>Minimum price using discount code</div>
+                                        <input ng-model="con.contents" class="form-group" type="number" min="0">
+                                    </div>
+                                    <div class="default-form-box col-sm-6">
+                                        <div>Quantity request</div>
+                                        <input ng-model="con.quantity" class="form-group" type="number" min="0">
+                                    </div>
+                                    <button class="bg-primary text-white p-2" style="border-radius: 5px ;" ng-click="newCondition()">New condition for discount</button>
+                                </div>
+                            </form>
+                            <h3 class="text-center mt-3">List conditions</h3>
+                            <div class="table_page table-responsive">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>#</th>
+                                            <th>Min Spend</th>
+                                            <th>Quantity Request</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr ng-repeat="con in conditents">
+                                            <td>{{$index+1}}</td>
+                                            <td>{{con.contents}}</td>
+                                            <td>{{con.quantity}}</td>
+                                            <td>
+                                                <div class="">
+                                                    <button ng-click="deleteCondition(con)" class="bg-warning text-danger fa fa-times" style="font-size: 25px" aria-hidden="true"></button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
                         </div>
                     </div>
                 </div>
