--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/modal/ModalWishList.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/modal/ModalWishList.html
@@ -10,10 +10,10 @@
                 <br>
                 <div class="tt-modal-product">
                     <div class="tt-img">
-                        <img src="http://localhost:8080/getImage/{{productMessage.product.image}}" alt="{{productMessage.product.name}}">
+                        <img src="http://localhost:8080/getImage/{{productMessage.image}}" alt="Modern Smart Phone">
                     </div>
                     <br>
-                    <h2 class="tt-title"><a href="#">{{productMessage.product.name}}</a></h2>
+                    <h2 class="tt-title"><a href="#">{{productMessage.name}}</a></h2>
                 </div>
             </div>
         </div>
