--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/thank-you-page.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/thank-you-page.html
@@ -566,8 +566,8 @@
     <!-- Minify Version -->
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/plugins.min.js"></script>
-    <script src="assets/js/main.min.js"></script>
-    <script src="assets/js/single.js"></script>
+    <!-- <script src="assets/js/main.min.js"></script>
+    <script src="assets/js/single.js"></script> -->
 
     <!--Main JS (Common Activation Codes)-->
     <!-- <script src="assets/js/main.js"></script> -->
