--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
@@ -34,23 +34,6 @@
 </head>
 
 <body ng-app="admin" ng-controller="admin-controller">
-    <!-- breadcrumb-area start -->
-    <div class="breadcrumb-area">
-        <div class="container">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Admin</h2>
-                    <!-- breadcrumb-list start -->
-                    <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Admin Management</li>
-                    </ul>
-                    <!-- breadcrumb-list end -->
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- breadcrumb-area end -->
     <!-- account area start -->
     <div class="account-dashboard pt-100px pb-100px">
         <div class="container">
@@ -64,6 +47,7 @@
 
                             <li><a href="#discount" data-bs-toggle="tab" class="nav-link" id="">Discount</a></li>
                             <li><a href="#conditent" data-bs-toggle="tab" class="nav-link" id="">Conditent discount</a></li>
+                            <li><a href="#Top5products" data-bs-toggle="tab" class="nav-link" id="">Top 5 Products</a></li>
                             <li><a href="login.html" class="nav-link">logout</a></li>
                         </ul>
                     </div>
@@ -105,7 +89,7 @@
                                             </td>
                                             <td>{{pr.category.name}}</td>
                                             <td>{{pr.size}}</td>
-                                            <td>{{pr.soLuong==null?0:pr.soLuong}}</td>
+                                            <td>{{pr.productQty==null?0:pr.productQty}}</td>
                                             <td>
                                                 <div class="">
                                                     <button ng-click="edit(pr)" class="text-warning fa fa-pencil " style="font-size: 25px" aria-hidden="true"></button>
@@ -260,6 +244,7 @@
                                         </select>
                                     </div>
 
+
                                     <div class="default-form-box col-sm-6">
                                         <div>ConditionsOfUse</div>
                                         <select name="" id="" class="form-control" ng-model="discount.conditions.id">
@@ -331,8 +316,13 @@
                                         <div>Quantity request</div>
                                         <input ng-model="con.quantity" class="form-group" type="number" min="0">
                                     </div>
-                                    <button class="bg-primary text-white p-2" style="border-radius: 5px ;" ng-click="newCondition()">New condition for discount</button>
                                 </div>
+                                <div class="default-form-box col-sm-12">
+                                    <div>Number of used</div>
+                                    <input ng-model="con.numberOfUses" class="form-group" type="number" min="0">
+                                    <button class="bg-primary text-white p-2 mt-3" style="border-radius: 5px ;" ng-click="newCondition()">New condition for discount</button>
+                                </div>
+
                             </form>
                             <h3 class="text-center mt-3">List conditions</h3>
                             <div class="table_page table-responsive">
@@ -342,6 +332,7 @@
                                             <th>#</th>
                                             <th>Min Spend</th>
                                             <th>Quantity Request</th>
+                                            <th>Number of used</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
@@ -350,6 +341,7 @@
                                             <td>{{$index+1}}</td>
                                             <td>{{con.contents}}</td>
                                             <td>{{con.quantity}}</td>
+                                            <td>{{con.numberOfUses}}</td>
                                             <td>
                                                 <div class="">
                                                     <button ng-click="deleteCondition(con)" class="bg-warning text-danger fa fa-times" style="font-size: 25px" aria-hidden="true"></button>
@@ -359,7 +351,18 @@
                                     </tbody>
                                 </table>
                             </div>
-
+                        </div>
+                        <div class="tab-pane fade" id="Top5products">
+                            <div class="breadcrumb-area" ng-controller="report_controller">
+                                <div class="container">
+                                    <div class="row align-items-center justify-content-center">
+                                        <div class="col-8 text-center">
+                                            <canvas id="myChart"></canvas>
+                                            <script src="node_modules/npm/chart.js"></script>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
