--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/cart.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/cart.html
@@ -424,23 +424,6 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Cart</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Cart</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
         <!-- Cart Area Start -->
         <div class="cart-main-area pt-100px pb-100px">
             <div class="container">
@@ -468,7 +451,7 @@
                                             <td class="product-price-cart"><span class="amount">{{item.name}}</span></td>
                                             <td class="product-name"><span class="amount">{{item.price | number}} Vnd</span></td>
                                             <td>
-                                                <input class="form-control text-center p-2" ng-change="cart.update(item.id, item.quantity)" type="number" ng-model="item.quantity" max="10" min="1" />
+                                                <input class="form-control text-center p-2" ng-change="cart.update(item.id, item.quantity)" type="number" ng-model="item.quantity" max="{{item.productQty}}" min="1" />
                                             </td>
                                             <td class="product-subtotal">{{item.price * item.quantity |number}} Vnd</td>
                                             <td class="product-remove"> <a style="cursor: pointer;" ng-click="cart.remove(item.id)"><i class="fa fa-times"></i></a>
