--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/checkout.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/checkout.html
@@ -424,23 +424,6 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Checkout</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Checkout</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
         <!-- checkout area start -->
         <div class="checkout-area pt-100px pb-100px">
             <div class="container">
@@ -499,12 +482,19 @@
                                             </select>
                                         </div>
                                     </div>
-
+                                </div>
+                                <div class="additional-info billing-info mb-4 col-8">
+                                    <h6 class="">Apply to code discount</h6>
+                                    <div class="d-flex">
+                                        <input type="text" class="col-4" ng-model="codeDiscount">
+                                        <button class="p-2 bg-warning" ng-click="aplly()">Apply</button>
+                                    </div>
                                 </div>
                                 <div class="additional-info">
-                                    <label>Order notes</label>
+                                    <h6>Order notes</h6>
                                     <textarea ng-model="order_info.note" placeholder="Notes about your order, e.g. special notes for delivery. " name="message"></textarea>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -529,17 +519,27 @@
                                         <ul>
                                             <li>{{order_info.address}}</li>
                                         </ul>
+                                        <hr>
                                     </div>
-                                    <div class="your-order-bottom">
+
+                                    <div class="your-order-bottom" ng-show="DiscountAmount">
+                                        <ul>
+                                            <li class="your-order-shipping">Old price total</li>
+                                            <li>{{amountOrder+valueDiscount|number}}</li>
+                                        </ul>
+                                        <hr>
+                                    </div>
+
+                                    <div class="your-order-bottom" ng-show="DiscountAmount">
                                         <ul>
                                             <li class="your-order-shipping">Discount</li>
-                                            <li>None</li>
+                                            <li>{{valueDiscount|number}} {{discountForm?'%':'VND'}}</li>
                                         </ul>
                                     </div>
                                     <div class="your-order-total">
                                         <ul>
                                             <li class="order-total">Total</li>
-                                            <li>{{cart.amount | number}} Vnd</li>
+                                            <li>{{amountOrder| number}} Vnd</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -664,6 +664,16 @@
         </div>
         <!-- Footer Area End -->
     </div>
+    <!-- Modal Applyy -->
+    <!-- <div class="modal customize-class fade" id="exampleModal-Apply" data-aos-delay="200" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body text-center">
+                    cc
+                </div>
+            </div>
+        </div>
+    </div> -->
     <!-- Global Vendor, plugins JS -->
     <!-- JS Files
     ============================================ -->
