--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/compare.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/compare.html
@@ -3,6 +3,7 @@
 
 
 <!-- Mirrored from htmldemo.net/hmart/hmart/compare.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Sep 2022 11:36:44 GMT -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,9 +27,10 @@
     <!-- Minify Version -->
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
+    <script src="/assets/js/angular1.7.9.min.js"></script>
 </head>
 
-<body>
+<body ng-app="admin" ng-controller="listDiscount">
     <div class="main-wrapper">
         <header>
             <!-- Header top area start -->
@@ -202,12 +204,12 @@
                                                 <li class="title"><a href="#">Single Product Page</a></li>
                                                 <li><a href="single-product-slider.html">Product Slider</a></li>
                                                 <li><a href="single-product-gallery-left.html">Product Gallery Left</a>
-                                                <li><a href="single-product-gallery-right.html">Product Gallery Right</a> </li>
-                                                <li><a href="single-product-sticky-left.html">Product Sticky Left</a>
-                                                </li>
-                                                <li><a href="single-product-sticky-right.html">Product Sticky Right</a>
-                                                </li>
-                                                <li><a href="cart.html">Cart Page</a></li>
+                                                    <li><a href="single-product-gallery-right.html">Product Gallery Right</a> </li>
+                                                    <li><a href="single-product-sticky-left.html">Product Sticky Left</a>
+                                                    </li>
+                                                    <li><a href="single-product-sticky-right.html">Product Sticky Right</a>
+                                                    </li>
+                                                    <li><a href="cart.html">Cart Page</a></li>
                                             </ul>
                                             <ul class="d-block p-0 border-0">
                                                 <li class="title"><a href="#">Single Product Page</a></li>
@@ -218,40 +220,40 @@
                                                 <li><a href="login.html">Login & Register Page</a></li>
                                                 <li><a href="empty-cart.html">Empty Cart Page</a></li>
                                             </ul>
-                                        </li>
+                                            </li>
                                     </ul>
-                                </li>
-                                <li class="dropdown "><a href="#">Blog <i class="fa fa-angle-down"></i></a>
-                                    <ul class="sub-menu">
-                                        <li class="dropdown position-static"><a href="blog-grid-left-sidebar.html">Blog Grid
+                                    </li>
+                                    <li class="dropdown "><a href="#">Blog <i class="fa fa-angle-down"></i></a>
+                                        <ul class="sub-menu">
+                                            <li class="dropdown position-static"><a href="blog-grid-left-sidebar.html">Blog Grid
                                                 <i class="fa fa-angle-right"></i></a>
-                                            <ul class="sub-menu sub-menu-2">
-                                                <li><a href="blog-grid.html">Blog Grid</a></li>
-                                                <li><a href="blog-grid-left-sidebar.html">Blog Grid Left Sidebar</a></li>
-                                                <li><a href="blog-grid-right-sidebar.html">Blog Grid Right Sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown position-static"><a href="blog-list-left-sidebar.html">Blog List
+                                                <ul class="sub-menu sub-menu-2">
+                                                    <li><a href="blog-grid.html">Blog Grid</a></li>
+                                                    <li><a href="blog-grid-left-sidebar.html">Blog Grid Left Sidebar</a></li>
+                                                    <li><a href="blog-grid-right-sidebar.html">Blog Grid Right Sidebar</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="dropdown position-static"><a href="blog-list-left-sidebar.html">Blog List
                                                 <i class="fa fa-angle-right"></i></a>
-                                            <ul class="sub-menu sub-menu-2">
-                                                <li><a href="blog-list.html">Blog List</a></li>
-                                                <li><a href="blog-list-left-sidebar.html">Blog List Left Sidebar</a></li>
-                                                <li><a href="blog-list-right-sidebar.html">Blog List Right Sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="dropdown position-static"><a href="blog-single-left-sidebar.html">Single
+                                                <ul class="sub-menu sub-menu-2">
+                                                    <li><a href="blog-list.html">Blog List</a></li>
+                                                    <li><a href="blog-list-left-sidebar.html">Blog List Left Sidebar</a></li>
+                                                    <li><a href="blog-list-right-sidebar.html">Blog List Right Sidebar</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="dropdown position-static"><a href="blog-single-left-sidebar.html">Single
                                                 Blog <i class="fa fa-angle-right"></i></a>
-                                            <ul class="sub-menu sub-menu-2">
-                                                <li><a href="blog-single.html">Single Blog</a>
-                                                <li><a href="blog-single-left-sidebar.html">Single Blog Left Sidebar</a>
+                                                <ul class="sub-menu sub-menu-2">
+                                                    <li><a href="blog-single.html">Single Blog</a>
+                                                        <li><a href="blog-single-left-sidebar.html">Single Blog Left Sidebar</a>
+                                                        </li>
+                                                        <li><a href="blog-single-right-sidebar.html">Single Blog Right Sidebar</a>
+                                                        </li>
+                                                </ul>
                                                 </li>
-                                                <li><a href="blog-single-right-sidebar.html">Single Blog Right Sidebar</a>
-                                                </li>
-                                            </ul>
+                                        </ul>
                                         </li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -442,39 +444,39 @@
                                         <li><a href="single-product-slider.html">Product Slider</a></li>
                                         <li><a href="single-product-gallery-left.html">Product Gallery Left</a>
                                     </ul>
-                                </li>
-                                <li>
-                                    <a href="#"><span class="menu-text">Single Product Page</span></a>
-                                    <ul class="sub-menu">
-                                        <li><a href="single-product-gallery-right.html">Product Gallery
+                                    </li>
+                                    <li>
+                                        <a href="#"><span class="menu-text">Single Product Page</span></a>
+                                        <ul class="sub-menu">
+                                            <li><a href="single-product-gallery-right.html">Product Gallery
                                                 Right</a> </li>
-                                        <li><a href="single-product-sticky-left.html">Product Sticky Left</a>
-                                        </li>
-                                        <li><a href="single-product-sticky-right.html">Product Sticky Right</a>
-                                        </li>
-                                        <li><a href="compare.html">Compare Page</a></li>
-                                        <li><a href="wishlist.html">Wishlist Page</a></li>
-                                        <li><a href="my-account.html">Account Page</a></li>
-                                        <li><a href="login.html">Login & Register Page</a></li>
-                                        <li><a href="empty-cart.html">Empty Cart Page</a></li>
-                                    </ul>
+                                            <li><a href="single-product-sticky-left.html">Product Sticky Left</a>
+                                            </li>
+                                            <li><a href="single-product-sticky-right.html">Product Sticky Right</a>
+                                            </li>
+                                            <li><a href="compare.html">Compare Page</a></li>
+                                            <li><a href="wishlist.html">Wishlist Page</a></li>
+                                            <li><a href="my-account.html">Account Page</a></li>
+                                            <li><a href="login.html">Login & Register Page</a></li>
+                                            <li><a href="empty-cart.html">Empty Cart Page</a></li>
+                                        </ul>
+                                    </li>
+                            </ul>
+                            </li>
+                            <li><a href="#"><span class="menu-text">Blog</span></a>
+                                <ul class="sub-menu">
+                                    <li><a href="blog-grid.html">Blog Grid Page</a></li>
+                                    <li><a href="blog-grid-left-sidebar.html">Grid Left Sidebar</a></li>
+                                    <li><a href="blog-grid-right-sidebar.html">Grid Right Sidebar</a></li>
+                                    <li><a href="blog-list.html">Blog List Page</a></li>
+                                    <li><a href="blog-list-left-sidebar.html">List Left Sidebar</a></li>
+                                    <li><a href="blog-list-right-sidebar.html">List Right Sidebar</a></li>
+                                    <li><a href="blog-single.html">Blog Single Page</a></li>
+                                    <li><a href="blog-single-left-sidebar.html">Single Left Sidebar</a></li>
+                                    <li><a href="blog-single-right-sidebar.html">Single Right Sidbar</a>
+                                </ul>
                                 </li>
-                            </ul>
-                        </li>
-                        <li><a href="#"><span class="menu-text">Blog</span></a>
-                            <ul class="sub-menu">
-                                <li><a href="blog-grid.html">Blog Grid Page</a></li>
-                                <li><a href="blog-grid-left-sidebar.html">Grid Left Sidebar</a></li>
-                                <li><a href="blog-grid-right-sidebar.html">Grid Right Sidebar</a></li>
-                                <li><a href="blog-list.html">Blog List Page</a></li>
-                                <li><a href="blog-list-left-sidebar.html">List Left Sidebar</a></li>
-                                <li><a href="blog-list-right-sidebar.html">List Right Sidebar</a></li>
-                                <li><a href="blog-single.html">Blog Single Page</a></li>
-                                <li><a href="blog-single-left-sidebar.html">Single Left Sidebar</a></li>
-                                <li><a href="blog-single-right-sidebar.html">Single Right Sidbar</a>
-                            </ul>
-                        </li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- OffCanvas Menu End -->
@@ -501,21 +503,26 @@
         </div>
         <!-- OffCanvas Menu End -->
         <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Compare</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Compare</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
+
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <div class="row">
+                        <div class="card m-2" style="width: 24rem ;" ng-repeat="dis in discounts">
+                            <div class="card-body">
+                                <h5 class="card-title">{{dis.titleDiscount}}</h5>
+                                <h3 class="card-subtitle mb-2 text-muted">{{dis.valuedecrease}} {{dis.discountForm?'%':'thousand dong'}}</h3>
+                                <small class="text-muted">For each product</small>
+                                <p class="card-text">Start date {{dis.startDate|date:'dd/MM/yyyy'}} from {{dis.endDate|date:'dd/MM/yyyy'}}</p>
+                                <button class="p-3 bg-danger text-light" ng-click="coppy(dis.codeDiscount)">Coppy code discount </button> {{dis.codeDiscount}}
+                            </div>
+                        </div>
                     </div>
+                    <!-- breadcrumb-list end -->
                 </div>
             </div>
         </div>
+
         <!-- breadcrumb-area end -->
         <!-- Compare Area Start -->
         <div class="compare-area pt-100px pb-100px">
@@ -548,16 +555,13 @@
                                         <tr>
                                             <td class="first-column">Description</td>
                                             <td class="pro-desc">
-                                                <p>Lorem ipsum dolor sit amet, consect adipisicing elit, sed do eiusmod tempor incidi ut labore
-                                                    et dolore magna aliqua.</p>
+                                                <p>Lorem ipsum dolor sit amet, consect adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua.</p>
                                             </td>
                                             <td class="pro-desc">
-                                                <p>Lorem ipsum dolor sit amet, consect adipisicing elit, sed do eiusmod tempor incidi ut labore
-                                                    et dolore magna aliqua.</p>
+                                                <p>Lorem ipsum dolor sit amet, consect adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua.</p>
                                             </td>
                                             <td class="pro-desc">
-                                                <p>Lorem ipsum dolor sit amet, consect adipisicing elit, sed do eiusmod tempor incidi ut labore
-                                                    et dolore magna aliqua. </p>
+                                                <p>Lorem ipsum dolor sit amet, consect adipisicing elit, sed do eiusmod tempor incidi ut labore et dolore magna aliqua. </p>
                                             </td>
                                         </tr>
                                         <tr>
@@ -729,11 +733,13 @@
                         <div class="line-shape-top line-height-1">
                             <div class="row flex-md-row-reverse align-items-center">
                                 <div class="col-md-6 text-center text-md-end">
-                                    <div class="payment-mth"><a href="#"><img class="img img-fluid" src="assets/images/icons/payment.png" alt="payment-image"></a></div>
+                                    <div class="payment-mth">
+                                        <a href="#"><img class="img img-fluid" src="assets/images/icons/payment.png" alt="payment-image"></a>
+                                    </div>
                                 </div>
                                 <div class="col-md-6 text-center text-md-start">
-                                    <p class="copy-text"> © 2021 <strong>Hmart</strong> Made With <i class="fa fa-heart"
-                                        aria-hidden="true"></i> By <a class="company-name" href="https://themeforest.net/user/codecarnival/portfolio">
+                                    <p class="copy-text"> © 2021 <strong>Hmart</strong> Made With <i class="fa fa-heart" aria-hidden="true"></i> By
+                                        <a class="company-name" href="https://themeforest.net/user/codecarnival/portfolio">
                                             <strong> Codecarnival </strong></a>.</p>
                                 </div>
                             </div>
@@ -769,4 +775,5 @@
 
 
 <!-- Mirrored from htmldemo.net/hmart/hmart/compare.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Sep 2022 11:36:44 GMT -->
+
 </html>
