--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/login.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/login.html
@@ -502,23 +502,6 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Login</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Login</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
         <!-- login area start -->
         <div class="login-register-area pt-100px pb-100px" ng-controller="login">
             <div class="container">
@@ -537,7 +520,20 @@
                                 <div id="lg1" class="tab-pane active">
                                     <div class="login-form-container">
                                         <div class="login-register-form">
-                                            <form>
+                                            <form action="" method="post">
+                                                <input type="text" name="username" placeholder="Username" ng-model="form.username" />
+                                                <input type="password" name="userpassword" placeholder="Password" ng-model="form.password" />
+                                                <div class="button-box">
+                                                    <div class="login-toggle-btn">
+                                                        <input type="checkbox" />
+                                                        <a class="flote-none" href="javascript:void(0)" name="remember">Remember me</a>
+                                                        <a href="#">Forgot Password?</a>
+                                                    </div>
+                                                    <h3>{{mes}}</h3>
+                                                </div>
+                                            </form>
+                                            <button ng-click="login()" class="btn btn-primary" style="background-color: rgb(125, 125, 255);"><span>Login</span></button>
+                                            <!-- <form>
                                                 <input type="text" name="user-name" placeholder="Username" ng-model="user.username" />
                                                 <input type="password" name="user-password" placeholder="Password" ng-model="user.password" />
                                                 <div class="button-box">
@@ -548,7 +544,7 @@
                                                     </div>
                                                     <button ng-click="login(user)"><span>Login</span></button>
                                                 </div>
-                                            </form>
+                                            </form> -->
                                         </div>
                                     </div>
                                 </div>
@@ -556,13 +552,15 @@
                                     <div class="login-form-container">
                                         <div class="login-register-form">
                                             <form action="#" method="post">
-                                                <input type="text" name="user-name" placeholder="Username" />
-                                                <input type="password" name="user-password" placeholder="Password" />
-                                                <input name="user-email" placeholder="Email" type="email" />
-                                                <div class="button-box">
-                                                    <button type="submit"><span>Register</span></button>
-                                                </div>
+                                                <input type="text" name="user-name" placeholder="Username" ng-model="form2.username" />
+                                                <input type="text" name="full-name" placeholder="Username" ng-model="form2.fullname" />
+                                                <input type="password" name="user-password" placeholder="Password" ng-model="form2.password" />
+                                                <input name="user-email" placeholder="Email" type="email" ng-model="form2.email" />
+                                                <input type="hidden" ng-model="form2.photo" value="b.jpg" />
+                                                <input type="hidden" value="CUS" ng-model="form2.roleid">
+                                                <button ng-click="create()"><span>Register</span></button>
                                             </form>
+
                                         </div>
                                     </div>
                                 </div>
@@ -702,7 +700,63 @@
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/plugins.min.js"></script>
     <script src="assets/js/login_check.js"></script>
+    <script>
+        let host = "http://localhost:8080/rest/account";
+        const app = angular.module("app", []);
+        app.controller("ctrl", function($scope, $http) {
+            $scope.form = {};
+            $scope.form2 = {};
+            $scope.mes = "";
+            $scope.reset = function() {
+                $scope.form = {
+                    username: '',
+                    password: '',
+                    email: ''
+                };
+                $scope.form2 = {
+                    username: '',
+                    password: '',
+                    email: ''
+                }
+            }
 
+            $scope.getData = function() {
+                var url = `${host}`;
+                $http.get(url).then(resp => {
+                    $scope.mes = resp.data[0];
+                    console.log("Success", resp);
+                }).catch(error => {
+                    console.log("Error", error);
+                })
+            }
+
+            $scope.login = function() {
+                var item = angular.copy($scope.form);
+                var url = `${host}/loginCheck`;
+                $http.post(url, item).then(resp => {
+                    $scope.mes = resp.data[0];
+                    console.log($scope.mes);
+                    console.log("Success", resp);
+                }).catch(error => {
+                    console.log("Error", error);
+                })
+            }
+            $scope.create = function() {
+
+                var item = angular.copy($scope.form2);
+                console.log(item);
+                var url = `${host}/createUser`;
+                console.log(item);
+                $http.post(url, item).then(resp => {
+                    $scope.reset();
+                    console.log("Success", resp);
+                    alert("Tạo tài khoản thành công !")
+                }).catch(error => {
+                    console.log("Error", error);
+                })
+            }
+        })
+    </script>
     <!--Main JS (Common Activation Codes)-->
     <!-- <script src="assets/js/main.js"></script> -->
 </body>
