--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/shop-4-column.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/shop-4-column.html
@@ -25,7 +25,7 @@
     <!-- Style CSS -->
     <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
     <!-- Minify Version -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <script src="/assets/js/angular1.7.9.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <link rel="stylesheet" href="assets/css/style.min.css">
@@ -424,23 +424,6 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Product Page</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Shop</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
         <!-- Shop Page Start  -->
         <div class="shop-category-area pt-100px pb-100px">
             <div class="container">
@@ -510,7 +493,9 @@
                                                                     {{pr.price | number}} Vnd
                                                                 </span>
                                                             </span>
+                                                            <div class="text-center"> <small>{{pr.productQty>10?'More than':'The remaining product left'}} {{pr.productQty}}</small></div>
                                                         </div>
+
                                                         <div class="actions">
                                                             <button title="Add To Cart" class="action add-to-cart" ng-click="cart.add(pr.id)" data-bs-toggle="modal" data-bs-target="#exampleModal-Cart"><i
                                                                 class="pe-7s-shopbag"></i></button>
