--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
@@ -418,23 +418,6 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Product Page</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Shop</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
         <!-- Product Details Area Start -->
         <div class="product-details-area pt-100px pb-100px">
             <div class="container">
@@ -485,40 +468,11 @@
                                 </div>
                                 <span class="read-review"><a class="reviews" href="#">(5 Customer Review)</a></span>
                             </div>
+                            <div ng-show="product.productQty<10" class="fst-italic text-secondary"><small>This product only left <b class="">{{product.productQty}}</b> !</small> </div>
 
-                            <div class="pro-details-categories-info pro-details-same-style d-flex m-0">
-                                <span>SKU:</span>
-                                <ul class="d-flex">
-                                    <li>
-                                        <a href="#">Ch-256xl</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="pro-details-categories-info pro-details-same-style d-flex m-0">
-                                <span>Categories: </span>
-                                <ul class="d-flex">
-                                    <li>
-                                        <a href="#">Smart Device, </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">ETC</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="pro-details-categories-info pro-details-same-style d-flex m-0">
-                                <span>Tags: </span>
-                                <ul class="d-flex">
-                                    <li>
-                                        <a href="#">Smart Device, </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Phone</a>
-                                    </li>
-                                </ul>
-                            </div>
                             <div class="pro-details-quality">
                                 <div class="col-2 p-0">
-                                    <input class="form-control p-2 text-center " ng-model="productQty" value="1" type="number" min="1" max="20" style="font-size: 16px;" />
+                                    <input class="form-control p-2 text-center " ng-model="productQty" ng-value="product.productQty" type="number" min="1" max="{{product.productQty}}" style="font-size: 16px;" />
                                 </div>
                                 <div class="pro-details-cart">
                                     <button class="add-cart" ng-click="cart.addWithQty(product.id)"> Add To Cart</button>
@@ -894,7 +848,6 @@
     <script src="assets/js/vendor.min.js"></script>
     <script src="assets/js/plugins.min.js"></script>
     <script src="assets/js/main.min.js"></script>
-    <script src="assets/js/menu.js"></script>
     <script src="assets/js/single.js"></script>
     <!--Main JS (Common Activation Codes)-->
     <!-- <script src="assets/js/main.js"></script> -->
