--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/login.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/login.html
@@ -520,20 +520,7 @@
                                 <div id="lg1" class="tab-pane active">
                                     <div class="login-form-container">
                                         <div class="login-register-form">
-                                            <form action="" method="post">
-                                                <input type="text" name="username" placeholder="Username" ng-model="form.username" />
-                                                <input type="password" name="userpassword" placeholder="Password" ng-model="form.password" />
-                                                <div class="button-box">
-                                                    <div class="login-toggle-btn">
-                                                        <input type="checkbox" />
-                                                        <a class="flote-none" href="javascript:void(0)" name="remember">Remember me</a>
-                                                        <a href="#">Forgot Password?</a>
-                                                    </div>
-                                                    <h3>{{mes}}</h3>
-                                                </div>
-                                            </form>
-                                            <button ng-click="login()" class="btn btn-primary" style="background-color: rgb(125, 125, 255);"><span>Login</span></button>
-                                            <!-- <form>
+                                            <form>
                                                 <input type="text" name="user-name" placeholder="Username" ng-model="user.username" />
                                                 <input type="password" name="user-password" placeholder="Password" ng-model="user.password" />
                                                 <div class="button-box">
@@ -544,7 +531,7 @@
                                                     </div>
                                                     <button ng-click="login(user)"><span>Login</span></button>
                                                 </div>
-                                            </form> -->
+                                            </form>
                                         </div>
                                     </div>
                                 </div>
