--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/wishlist.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/wishlist.html
@@ -440,7 +440,7 @@
                 <h3 class="cart-page-title">Your List Favourite Product</h3>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                        <form action="#">
+                        <form>
                             <div class="table-content table-responsive cart-table-content">
                                 <table>
                                     <thead>
