--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/wishlist.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/wishlist.html
@@ -467,7 +467,7 @@
                                             <td>
                                                 <button ng-click="saveIdProduct(item.product.id)" class="p-2 text-dark bg-info" aria-hidden="true" style="border-radius: 5px;"><i class="bi bi-eye-fill"></i></button>
                                                 <button ng-click="cart.add(item.product.id)" class="p-2 text-white bg-primary" aria-hidden="true" style="border-radius: 5px;"><i class="pe-7s-shopbag"></i></button>
-                                                <button ng-click="deleteFav(item.id)" class="p-2 text-white bg-danger" aria-hidden="true" style="border-radius: 5px;">X</button>
+                                                <button ng-click="deleteFav(item.id)" class="p-2 text-white bg-danger" aria-hidden="true" style="border-radius: 5px;"><i class="bi bi-trash"></i></button>
                                             </td>
                                         </tr>
                                     </tbody>
