--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/modal/ModalWishList.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/modal/ModalWishList.html
@@ -1,8 +1,8 @@
 <!-- Modal wishlist -->
-<div class="modal customize-class fade" id="exampleModal-Wishlist" data-aos-delay="200" tabindex="-1" aria-hidden="true">
+<div class="modal customize-class fade" id="exampleModal-Wishlist" data-aos-delay="300" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-body text-center">
+            <div class="modal-body text-center"  ng-show="checkAddFV">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="pe-7s-close"></i></button>
                 <div class="tt-modal-messages text-danger">
                     <i class="bi bi-check-circle text-danger"></i> Added To Your Favourite <i class="bi bi-heart text-danger"></i>!
@@ -10,10 +10,25 @@
                 <br>
                 <div class="tt-modal-product">
                     <div class="tt-img">
-                        <img src="http://localhost:8080/getImage/{{productMessage.image}}" alt="Modern Smart Phone">
+                        <img src="http://localhost:8080/getImage/{{productMessage.product.image}}" alt="Modern Smart Phone">
                     </div>
                     <br>
-                    <h2 class="tt-title"><a href="#">{{productMessage.name}}</a></h2>
+                    <h2 class="tt-title"><a href="#">{{productMessage.product.name}}</a></h2>
+                </div>
+            </div>
+
+            <div class="modal-body text-center"  ng-show="!checkAddFV">
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="pe-7s-close"></i></button>
+                <div class="tt-modal-messages text-danger">
+                    <i class="bi bi-x-circle text-danger"></i>This Product was added before!
+                </div>
+                <br>
+                <div class="tt-modal-product">
+                    <div class="tt-img">
+                        <img src="http://localhost:8080/getImage/{{productImage}}" style="opacity: 0.3;" alt="{{productMessage.product.name}}">
+                    </div>
+                    <br>
+                    <h2 class="tt-title text-warning">{{productName}}</h2>
                 </div>
             </div>
         </div>
