--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/single-product.html
@@ -466,7 +466,7 @@
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
                                 </div>
-                                <span class="read-review"><a class="reviews" href="#">(5 Customer Review)</a></span>
+                                <span class="read-review"><a class="reviews" href="#">({{countEva}} Customer Review)</a></span>
                             </div>
                             <div ng-show="product.productQty<10" class="fst-italic text-secondary"><small>This product only left <b class="">{{product.productQty}}</b> !</small> </div>
 
@@ -486,7 +486,7 @@
                         <div class="description-review-wrapper">
                             <div class="description-review-topbar nav">
                                 <button data-bs-toggle="tab" class="active" data-bs-target="#des-details2">Information</button>
-                                <button data-bs-toggle="tab" data-bs-target="#des-details3">Reviews (02)</button>
+                                <button data-bs-toggle="tab" data-bs-target="#des-details3">Reviews ({{countEva}})</button>
                             </div>
                             <div class="tab-content description-review-bottom">
                                 <div id="des-details2" class="tab-pane active">
@@ -504,7 +504,7 @@
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <div class="review-wrapper">
-                                                <div class="single-review">
+                                                <div class="single-review" ng-repeat="ps in list_eva">
                                                     <div class="review-img">
                                                         <img src="assets/images/review-image/1.png" alt="" />
                                                     </div>
@@ -512,86 +512,87 @@
                                                         <div class="review-top-wrap">
                                                             <div class="review-left">
                                                                 <div class="review-name">
-                                                                    <h4>White Lewis</h4>
+                                                                    <h4>{{ps.account.fullname}}</h4>
                                                                 </div>
                                                                 <div class="rating-product">
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
+                                                                    <i ng-show="ps.numberStart >= 1" class="fa fa-star"></i>
+                                                                    <i ng-show="ps.numberStart >= 2" class="fa fa-star"></i>
+                                                                    <i ng-show="ps.numberStart >= 3" class="fa fa-star"></i>
+                                                                    <i ng-show="ps.numberStart >= 4" class="fa fa-star"></i>
+                                                                    <i ng-show="ps.numberStart == 5" class="fa fa-star"></i>
                                                                 </div>
                                                             </div>
                                                             <div class="review-left">
-                                                                <a href="#">Reply</a>
+                                                                <a href="#">&nbsp; {{ps.createDate | date: 'dd/MM/yyyy'}}</a>
                                                             </div>
                                                         </div>
                                                         <div class="review-bottom">
                                                             <p>
-                                                                Vestibulum ante ipsum primis aucibus orci luctustrices posuere cubilia Curae Suspendisse viverra ed viverra. Mauris ullarper euismod vehicula. Phasellus quam nisi, congue id nulla.
+                                                                {{ps.contents}}
                                                             </p>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="single-review child-review">
-                                                    <div class="review-img">
-                                                        <img src="assets/images/review-image/2.png" alt="" />
-                                                    </div>
-                                                    <div class="review-content">
-                                                        <div class="review-top-wrap">
-                                                            <div class="review-left">
-                                                                <div class="review-name">
-                                                                    <h4>White Lewis</h4>
-                                                                </div>
-                                                                <div class="rating-product">
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                    <i class="fa fa-star"></i>
-                                                                </div>
-                                                            </div>
-                                                            <div class="review-left">
-                                                                <a href="#">Reply</a>
-                                                            </div>
-                                                        </div>
-                                                        <div class="review-bottom">
-                                                            <p>Vestibulum ante ipsum primis aucibus orci luctustrices posuere cubilia Curae Sus pen disse viverra ed viverra. Mauris ullarper euismod vehicula.</p>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                            
                                             </div>
                                         </div>
+                                        
                                         <div class="col-lg-12">
                                             <div class="ratting-form-wrapper pl-50">
-                                                <h3>Add a Review</h3>
+                                                <hr>
+                                                <h3 class="text-center">Add a Review</h3>
                                                 <div class="ratting-form">
-                                                    <form action="#">
-                                                        <div class="star-box">
-                                                            <span>Your rating:</span>
-                                                            <div class="rating-product">
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                                <i class="fa fa-star"></i>
-                                                            </div>
-                                                        </div>
+                                                    <form>
                                                         <div class="row">
-                                                            <div class="col-md-6">
-                                                                <div class="rating-form-style">
-                                                                    <input placeholder="Name" type="text" />
+                                                            <span>Your rating:</span>
+                                                            <div class="star-box col-md-5">
+                                                                <div class="row m-0">       
+                                                                    <div class="row m-0"  style="height: 25px;">
+                                                                        <input ng-model="eva.NumberStart" ng-value="5" type="radio" name="star" class="col-md-4" style="width: 20px; height: 20px;">
+                                                                        <div class="col-md-8">
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i> 
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row m-0" style="height: 25px;">
+                                                                        <input ng-model="eva.NumberStart" ng-value="4" type="radio" name="star" class="col-md-4" style="width: 20px; height: 20px;">
+                                                                        <div class="col-md-8">
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>                                                                               </div>
+                                                                    </div>
+                                                                    <div class="row m-0" style="height: 25px;">
+                                                                        <input ng-model="eva.NumberStart" ng-value="3" type="radio" name="star" class="col-md-4" style="width: 20px; height: 20px;"> 
+                                                                        <div class="col-md-8">
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row m-0" style="height: 25px;">
+                                                                        <input ng-model="eva.NumberStart" ng-value="2" type="radio" name="star" class="col-md-4" style="width: 20px; height: 20px;">
+                                                                        <div class="col-md-8">
+                                                                            <i class="fa fa-star"></i>
+                                                                            <i class="fa fa-star"></i>
+                                                                        </div>
+                                                                    </div>
+                                                                    <div class="row m-0" style="height: 25px;">
+                                                                        <input ng-model="eva.NumberStart" ng-value="1" type="radio" name="star" class="col-md-4" style="width: 20px; height: 20px;"> 
+                                                                        <div class="col-md-8">
+                                                                            <i class="fa fa-star"></i>
+                                                                        </div>
+                                                                    </div>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-md-6">
-                                                                <div class="rating-form-style">
-                                                                    <input placeholder="Email" type="email" />
-                                                                </div>
-                                                            </div>
-                                                            <div class="col-md-12">
+                                                            
+                                                            <div class="col-md-7">
                                                                 <div class="rating-form-style form-submit">
-                                                                    <textarea name="Your Review" placeholder="Message"></textarea>
-                                                                    <button class="btn btn-primary btn-hover-color-primary " type="submit" value="Submit">Submit</button>
+                                                                    <textarea ng-model="eva.Contents" name="Your Review" placeholder="Message"></textarea>
+                                                                    <button ng-click="danhGia()" class="btn btn-primary btn-hover-color-primary " type="submit" value="Submit">Submit</button>
                                                                 </div>
                                                             </div>
                                                         </div>
