--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/admin.html
@@ -154,7 +154,7 @@
                                                             </div>
                                                             <div class="default-form-box col-sm-6">
                                                                 <div>Quantity</div>
-                                                                <input ng-model="product.soLuong" type="number" class="form-group">
+                                                                <input ng-model="product.productQty" type="number" class="form-group">
                                                             </div>
                                                         </div>
                                                         <div class="row">
