--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/modal/ModalWishList.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/modal/ModalWishList.html
@@ -2,7 +2,7 @@
 <div class="modal customize-class fade" id="exampleModal-Wishlist" data-aos-delay="300" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-body text-center"  ng-show="checkAddFV">
+            <div class="modal-body text-center" ng-show="checkAddFV">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="pe-7s-close"></i></button>
                 <div class="tt-modal-messages text-danger">
                     <i class="bi bi-check-circle text-danger"></i> Added To Your Favourite <i class="bi bi-heart text-danger"></i>!
@@ -17,10 +17,10 @@
                 </div>
             </div>
 
-            <div class="modal-body text-center"  ng-show="!checkAddFV">
+            <div class="modal-body text-center" ng-show="!checkAddFV">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="pe-7s-close"></i></button>
                 <div class="tt-modal-messages text-danger">
-                    <i class="bi bi-x-circle text-danger"></i>This Product was added before!
+                    This product you already love! Check it out in the favorites list!
                 </div>
                 <br>
                 <div class="tt-modal-product">
