--- a/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/wishlist.html
+++ b/File_Application/BE_Hmart/src/main/resources/templates/FE_Hmart/wishlist.html
@@ -417,23 +417,6 @@
             </div>
         </div>
         <!-- OffCanvas Menu End -->
-        <!-- breadcrumb-area start -->
-        <div class="breadcrumb-area">
-            <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="breadcrumb-title">Favourite Product</h2>
-                        <!-- breadcrumb-list start -->
-                        <ul class="breadcrumb-list">
-                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                            <li class="breadcrumb-item active">Favourite Product</li>
-                        </ul>
-                        <!-- breadcrumb-list end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- breadcrumb-area end -->
         <!-- Wishlist Area Start -->
         <div class="cart-main-area pt-100px pb-100px">
             <div class="container">
@@ -442,36 +425,51 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                         <form>
                             <div class="table-content table-responsive cart-table-content">
-                                <table>
-                                    <thead>
-                                        <tr>
-                                            <th>Image</th>
-                                            <th>Product Name</th>
-                                            <th>Price</th>
-                                            <th>Add Time</th>
-                                            <th>Category</th>
-                                            <th>Action</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr ng-repeat="item in list_fav">
-                                            <td class="product-thumbnail">
-                                                <a href="#"><img class="img-responsive ml-15px" src="http://localhost:8080/getImage/{{item.product.image}}" alt="{{item.product.name}}" /></a>
-                                            </td>
-                                            <td class="product-name"><a href="#">{{item.product.name}}</a></td>
-                                            <td class="product-price-cart"><span class="amount">{{item.product.price | number}} Vnd</span></td>
-                                            <td class="product-quantity">
-                                                {{item.datecreate | date: 'dd/MM/yyyy _ hh:mm:ss'}}
-                                            </td>
-                                            <td class="product-subtotal">{{item.product.category.name}}</td>
-                                            <td>
-                                                <button ng-click="saveIdProduct(item.product.id)" class="p-2 text-dark bg-info" aria-hidden="true" style="border-radius: 5px;"><i class="bi bi-eye-fill"></i></button>
-                                                <button ng-click="cart.add(item.product.id)" class="p-2 text-white bg-primary" aria-hidden="true" style="border-radius: 5px;"><i class="pe-7s-shopbag"></i></button>
-                                                <button ng-click="deleteFav(item.id)" class="p-2 text-white bg-danger" aria-hidden="true" style="border-radius: 5px;"><i class="bi bi-trash"></i></button>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                <div class="shop-list-wrapper mb-30px" ng-repeat="item in list_fav">
+                                    <div class="row">
+                                        <div class="col-md-5 col-lg-5 col-xl-4 mb-lm-30px">
+                                            <div class="product">
+                                                <div class="thumb">
+                                                    <a href="single-product.html" class="image">
+                                                        <img src="http://localhost:8080/getImage/{{item.product.image}}" alt="Product" />
+                                                        <img class="hover-image" src="http://localhost:8080/getImage/{{item.product.image}}" alt="Product" />
+                                                    </a>
+                                                    <span class="badges">
+                                                    <span class="new">New</span>
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-7 col-lg-7 col-xl-8">
+                                            <div class="content-desc-wrap">
+                                                <div class="content">
+                                                    <span class="category"><a href="#">{{item.product.category.name}}</a></span>
+                                                    <h5 class="title"><a href="single-product.html">{{item.product.name}}</a></h5>
+                                                    <div class="pro-details-rating-wrap">
+                                                        <div class="rating-product text-warning">
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                            <i class="fa fa-star"></i>
+                                                        </div>
+                                                        <span class="read-review"><a class="reviews" href="#">(5 Customer Review)</a></span>
+                                                    </div>
+                                                </div>
+                                                <div class="box-inner">
+                                                    <span class="price">
+                                                    <span class="new">{{item.product.price | number}} Vnd</span>
+                                                    </span>
+                                                    <div class="actions">
+                                                        <button ng-click="saveIdProduct(item.product.id)" class="p-2 text-dark bg-info m-1" aria-hidden="true" style="border-radius: 5px;"><i class="bi bi-eye-fill"></i></button>
+                                                        <button ng-click="cart.add(item.product.id)" class="p-2 text-white bg-primary m-1" aria-hidden="true" style="border-radius: 5px;"><i class="pe-7s-shopbag"></i></button>
+                                                        <button ng-click="deleteFav(item.id)" class="p-2 text-white bg-danger m-1" aria-hidden="true" style="border-radius: 5px;"><i class="bi bi-trash"></i></button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </form>
                     </div>
